--- a/style.css
+++ b/style.css
@@ -2,22 +2,23 @@
 *{
 margin: 0;
 padding: 0;
+box-sizing: border-box;
 
 }
 html,body{
     height: 100%;
+    background-color: rgb(235, 241, 244);
+
 
 }
 .main{
     display: flex;
     height: 100%;
-    background-color: rgb(235, 241, 244);
-
 }
 .main_intro_datos_logo{
     height: 48px;
     width: 120px;
-    margin: 40px 0 0 40px;
+    margin: 40px 0 0 40px ;
 }
 
 .main_intro_datos{
@@ -25,7 +26,7 @@ html,body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 168px 0 72px 240px;
+    margin: 168px 40px 72px 160px;
     
 }
 .main_intro_datos_contenedor_icon_boton{
@@ -34,7 +35,7 @@ html,body{
     gap: 8px;
 }
 .main_intro_datos_input{
-width: 577px;
+width: 75%;
 height: 48px;
 font-size: 2rem;
 line-height: 48px;
@@ -68,15 +69,17 @@ background-color: rgb(235, 241, 244);
     flex-direction: column;
     width: 30%;
     background-color: #FFFFFF;
-    margin: 40px;
+    margin: 40px 40px 40px 0;
     border-radius: 32px;
     align-items: center;
     justify-content: center;
     box-shadow: 0 24px 32px -8px rgba(0, 0, 0, 0.3);
  }
+
  .main_intro_datos_container_texto{
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
     gap: 16px;
     margin: 32px;
  }
@@ -87,4 +90,56 @@ background-color: rgb(235, 241, 244);
 .main_intro_datos_parrafo{
 text-align: center;
 line-height: 24px;
+}
+/* ==================================== */
+/* RESPOSIVIDAD PARA TABLETS */
+/* ==================================== */
+
+@media (max-width : 768px){
+    .main{
+        flex-direction: column;
+    }
+    .main_intro_datos_logo{
+        margin: 40px 0 ;
+        
+    }
+    .main_intro_datos{
+        width: auto;
+        margin: 40px;
+        min-height: 587px;
+    }
+    .main_mostrar_datos{
+        width: auto;
+        margin: 40px ;
+    }
+    .main_mostrar_datos_imagen{
+         display: none;
+
+    }
+
+}
+
+/* ==================================== */
+/* RESPOSIVIDAD PARA CELULARES */
+/* ==================================== */
+@media (max-width : 375px){
+    .main{
+        gap: 32px;
+    }
+    .main_intro_datos{
+        width: auto;
+        margin: 16px;
+    }
+    .main_mostrar_datos{
+        width: auto;
+        margin: 16px ;
+    }
+    .main_intro_datos_input{
+        min-width: 100%;
+    }
+    .main_intro_datos_contenedor_boton{
+        flex-direction: column;
+        
+    }
+    
 }
